--- a/index.html
+++ b/index.html
@@ -1,53 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Track your Order</title>
-  <link rel="stylesheet" href="./style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Track Order</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="tech-theme">
-
-  <!-- TECH SECTION -->
-  <div id="tech-section">
-    <h1>Track your Order</h1>
-
-    <input
-      type="tel"
-      id="orderInput"
-      placeholder="Enter Order ID"
-      inputmode="numeric"
-    />
-
-    <p id="errorText" class="error hidden"></p>
-
-    <button id="trackBtn">Track your Order ›</button>
-  </div>
-
-  <!-- VALENTINE SECTION -->
-  <div id="valentine-section" class="hidden">
-    <div class="hearts"></div>
-
-    <video id="valentineVideo" controls>
-      <source src="video.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-
-    <div id="choice-section" class="hidden">
-      <h2>Will you be my Valentine, Miss Thakur? 💖</h2>
-      <div class="buttons">
-        <button id="yesBtn">YES ❤️</button>
-        <button id="noBtn">NO 💔</button>
+<body class="track-page">
+  <div class="track-container">
+    <div class="track-card">
+      <h1>Track your Order</h1>
+      <div class="form-group">
+        <label for="order-id">Order ID</label>
+        <input type="number" id="order-id" placeholder="Enter your Order ID">
+        <span id="error-message" class="error-message"></span>
       </div>
-    </div>
-
-    <div id="final-message" class="hidden">
-      <p>
-        Miss Thakur, your responses aren’t stored —<br>
-        so how about a call with RD 📞
-      </p>
+      <button id="track-btn" class="btn-primary">Track your Order ›</button>
     </div>
   </div>
-
-  <script src="./script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
